--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -49,3 +49,9 @@ figure.floatleft {
     line-height: 1.3;
     margin-left: 15px;
 }
+
+:root {    
+    --main-width: 900px;    
+    --code-block-bg: rgb(26,17,16); #--code-block-bg: rgb(28, 29, 33);
+
+}
